# codex-batch-runner

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: beta-operations.md  cli-reference.md  events-and-index.md  execution.md  model-routing-contract.md  operator-installation.md  orchestration.md  provider-resource-report.md  requirements.md  review.md  spec.md  task-schema.md  worktrees.md
examples/: ROADMAP.local.example.md  TASKS.local.example.md  com.example.codex-batch-runner.plist  config.automation.example.json  config.example.json  execution-evidence-v2.example.json  orchestration-intake-v1.example.json  provider-resource-admission-policy-v1.example.json  provider-resource-mapping-v1.example.json  provider-resource-mapping-v2.example.json  provider-resource-simulation-request-v1.example.json  provider-resource-snapshot-v1.example.json  review-outcome-evidence-v1.example.json  routing-cost-evidence-v1.example.json  subagent-execution-evidence.example.json  task.example.json
tests/: test_antigravity_statusline.py  test_automatic_reviewer_routing_v2.py  test_capability_belief.py  test_cli.py  test_codex.py  test_codex_app_server_capacity.py  test_completion.py  test_config.py  test_dashboard.py  test_dashboard_data.py  test_direct_worktrees.py  test_doctor.py  test_evaluation.py  test_events.py  test_execution_evidence_v2.py  test_execution_evidence_v3.py  test_execution_target_selector.py  test_index.py  test_launchd_cli.py  test_launchd_lifecycle.py  test_launchd_operations.py  test_lock.py  test_model_requirements_v2.py  test_notifier_cursor.py  (+23 more)
(+87 files in other folders)
