[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-batch-runner"
version = "0.1.0"
description = "Local file-backed batch runner for Codex CLI tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "plaonn" }]
dependencies = []

[project.scripts]
cbr = "codex_batch_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codex_batch_runner*"]
